[package]
name = "actual_lix"
version = "0.1.1"
edition = "2021"
description = "A simple implementation of the readability test (Lix)"
license = "MIT"
repository = "https://github.com/abnerkaizer/lix"
documentation = "https://docs.rs/actual_lix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
